fix catalog page slider z-index

--- a/src/css/catalog-page.css
+++ b/src/css/catalog-page.css
@@ -39,7 +39,7 @@ body {
 
 .catalog-page .slider {
 	position: relative;
-	z-index: 1;
+	z-index: 0;
 	height: 10px;
 }
 
